; ModuleID = '/home/carl/AnghaBench/freebsd/sys/i386/bios/extr_apm.c_apm_do_suspend.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/i386/bios/extr_apm.c_apm_do_suspend.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.apm_softc = type { i64, i32, i64, i64 }

@apm_softc = common dso_local global %struct.apm_softc zeroinitializer, align 8
@apm_op_inprog = common dso_local global i64 0, align 8
@power_suspend = common dso_local global i32 0, align 4
@Giant = common dso_local global i32 0, align 4
@root_bus = common dso_local global i32 0, align 4
@hook = common dso_local global i32* null, align 8
@APM_HOOK_SUSPEND = common dso_local global i64 0, align 8
@PMST_SUSPEND = common dso_local global i32 0, align 4
@APM_HOOK_RESUME = common dso_local global i64 0, align 8
@power_resume = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @apm_do_suspend to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @apm_do_suspend() #0 {
  %1 = alloca %struct.apm_softc*, align 8
  %2 = alloca i32, align 4
  store %struct.apm_softc* @apm_softc, %struct.apm_softc** %1, align 8
  %3 = load %struct.apm_softc*, %struct.apm_softc** %1, align 8
  %4 = icmp eq %struct.apm_softc* %3, null
  br i1 %4, label %10, label %5

5:                                                ; preds = %0
  %6 = load %struct.apm_softc*, %struct.apm_softc** %1, align 8
  %7 = getelementptr inbounds %struct.apm_softc, %struct.apm_softc* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = icmp eq i64 %8, 0
  br i1 %9, label %10, label %11

10:                                               ; preds = %5, %0
  br label %50

11:                                               ; preds = %5
  store i64 0, i64* @apm_op_inprog, align 8
  %12 = load %struct.apm_softc*, %struct.apm_softc** %1, align 8
  %13 = getelementptr inbounds %struct.apm_softc, %struct.apm_softc* %12, i32 0, i32 2
  store i64 0, i64* %13, align 8
  %14 = load %struct.apm_softc*, %struct.apm_softc** %1, align 8
  %15 = getelementptr inbounds %struct.apm_softc, %struct.apm_softc* %14, i32 0, i32 3
  store i64 0, i64* %15, align 8
  %16 = load i32, i32* @power_suspend, align 4
  %17 = call i32 @EVENTHANDLER_INVOKE(i32 %16)
  %18 = call i32 @mtx_lock(i32* @Giant)
  %19 = load i32, i32* @root_bus, align 4
  %20 = call i32 @DEVICE_SUSPEND(i32 %19)
  store i32 %20, i32* %2, align 4
  %21 = load i32, i32* %2, align 4
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %23, label %24

23:                                               ; preds = %11
  br label %46

24:                                               ; preds = %11
  %25 = load i32*, i32** @hook, align 8
  %26 = load i64, i64* @APM_HOOK_SUSPEND, align 8
  %27 = getelementptr inbounds i32, i32* %25, i64 %26
  %28 = load i32, i32* %27, align 4
  %29 = call i32 @apm_execute_hook(i32 %28)
  %30 = load i32, i32* @PMST_SUSPEND, align 4
  %31 = call i64 @apm_suspend_system(i32 %30)
  %32 = icmp eq i64 %31, 0
  br i1 %32, label %33, label %38

33:                                               ; preds = %24
  %34 = load %struct.apm_softc*, %struct.apm_softc** %1, align 8
  %35 = getelementptr inbounds %struct.apm_softc, %struct.apm_softc* %34, i32 0, i32 1
  store i32 1, i32* %35, align 8
  %36 = call i32 (...) @apm_processevent()
  %37 = call i32 @mtx_unlock(i32* @Giant)
  br label %50

38:                                               ; preds = %24
  %39 = load i32*, i32** @hook, align 8
  %40 = load i64, i64* @APM_HOOK_RESUME, align 8
  %41 = getelementptr inbounds i32, i32* %39, i64 %40
  %42 = load i32, i32* %41, align 4
  %43 = call i32 @apm_execute_hook(i32 %42)
  %44 = load i32, i32* @root_bus, align 4
  %45 = call i32 @DEVICE_RESUME(i32 %44)
  br label %46

46:                                               ; preds = %38, %23
  %47 = call i32 @mtx_unlock(i32* @Giant)
  %48 = load i32, i32* @power_resume, align 4
  %49 = call i32 @EVENTHANDLER_INVOKE(i32 %48)
  br label %50

50:                                               ; preds = %46, %33, %10
  ret void
}

declare dso_local i32 @EVENTHANDLER_INVOKE(i32) #1

declare dso_local i32 @mtx_lock(i32*) #1

declare dso_local i32 @DEVICE_SUSPEND(i32) #1

declare dso_local i32 @apm_execute_hook(i32) #1

declare dso_local i64 @apm_suspend_system(i32) #1

declare dso_local i32 @apm_processevent(...) #1

declare dso_local i32 @mtx_unlock(i32*) #1

declare dso_local i32 @DEVICE_RESUME(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
